urcu/tests/ui/list/iter-forward-fail-0.stderr
error[E0505]: cannot move out of `list` because it is borrowed
  --> tests/ui/list/iter-forward-fail-0.rs:11:10
   |
8  |     let list = RcuList::<u32, RcuContextMemb>::new();
   |         ---- binding `list` declared here
9  |     let guard = context.rcu_read_lock();
10 |     let mut iter = list.iter_forward(&guard);
   |                    ---- borrow of `list` occurs here
11 |     drop(list);
   |          ^^^^ move out of `list` occurs here
12 |     println!("{:?}", iter.next());
   |                      ---- borrow later used here
